gccida/c1/cpp_quote_string
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_quote_string/src/cppmacro.c:725:13: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
else if ( ( sch_istable[v6] & 0x10) != 0 ) 
            ^~~~~~~~~~~
            _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_quote_string/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cpp_quote_string/src/obj/cppmacro.o] Error 1
